--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Jin Zao</h1>
+            <h1>Wang Xiu Ying</h1>
             <h2>Full Stack Web Developer</h2>
             <div class="contact-info">
                 <ul>
