--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jin Zao</title>
+    <title>Wang Xiu Ying|Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -50,14 +50,11 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Wang Xiu Ying</h1>
-            <h2>Full Stack Web Developer</h2>
+            <h2>Full Stack Web & Mobile Developer</h2>
             <div class="contact-info">
                 <ul>
                     <li>
-                        <a href="https://github.com/jin-zao" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://stackoverflow.com/story/jinzao" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                        <a href="https://github.com/wang-xiu-ying" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                     </li>
                     <li>
                         <a href="https://www.linkedin.com/in/zao-jin-b01223194/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
