--- a/index.html
+++ b/index.html
@@ -218,26 +218,25 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
+            <li>React.js</li>
+            <li>Redux</li>
+            <li>Vue.js</li>
+            <li>Vuetify</li>
             <li>PHP</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
+            <li>Laravel</li>
+            <li>CodeIgniter</li>
+            <li>Python</li>
+            <li>Django</li>
+            <li>Flask</li>
+            <li>Git</li>
             <li>Docker</li>
             <li>Jenkins</li>
             <li>AWS</li>
-            <li>Jira</li>
-            <li>Web Scraping</li>
-            <li>PostgreSQL</li>
+            <li>Azure</li>
             <li>MySQL</li>
-            <li>Supervisor</li>
-            <li>Django</li>
-            <li>Git</li>
+            <li>PostgreSQL</li>
             <li>MongoDB</li>
-            <li>Nginx</li>
+            <li>Firebase</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -269,7 +268,7 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2015 - 2020 Jin Zao
+                        Copyright &copy; 2015 - 2021 Wang Xiu Ying
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -281,9 +280,6 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
                     <ul>
                         <li>
                             <a href="https://github.com/jin-zao" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://stackoverflow.com/story/jinzao" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/zao-jin-b01223194/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
