fix: whatsapp link add

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <a href="https://discord.gg/8shz4T" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
                     </li> 
                     <li>
-                        <a href="https://wa.link/nzfind" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                        <a href="wa.link/ly9qzo" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                     </li>                    
                  </ul>
             </div>
@@ -113,7 +113,7 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading"><b>Experience</b></h2>
         <div id="experience-timeline">
             <div data-date="04/2012 - 11/2019">
                 <h3>Talenox, Hong Kong, Hong Kong, China</h3>
