fix: whatsapp link update

--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@
                         <a href="https://t.me/zaojin" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a>
                     </li>
                     <li>
-                        <a href="https://discord.gg/8shz4T" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
-                    </li> 
-                    <li>
-                        <a href="wa.link/ly9qzo" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                        <a href="http://wa.link/ly9qzo" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                     </li>                    
                  </ul>
             </div>
@@ -297,7 +294,7 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
                             <a href="https://discordapp.com/users/jinzao#7371" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
                         </li> 
                         <li>
-                            <a href="https://wa.link/nzfind" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                            <a href="http://wa.link/ly9qzo" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                         </li>                    
                     </ul>
                 </div>
