--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a href="skype:live:.cid.9eda2a926d35cefa" target="_blank"><i class="fa fa-skype" aria-hidden="true"></i></a>
                     </li>
                     <li>
-                        <a href="https://t.me/zaojin" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a>
+                        <a href="https://t.me/wangxiuying2" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a>
                     </li>
                     <li>
                         <a href="http://wa.link/ly9qzo" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
@@ -288,11 +288,8 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
                             <a href="skype:live:.cid.9eda2a926d35cefa" target="_blank"><i class="fa fa-skype" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://t.me/zaojin" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a>
+                            <a href="https://t.me/wangxiuying2" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a>
                         </li>
-                        <li>
-                            <a href="https://discordapp.com/users/jinzao#7371" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
-                        </li> 
                         <li>
                             <a href="http://wa.link/ly9qzo" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                         </li>                    
