fix: github link update

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/jin-zao" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/wang-xiu-ying" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/zao-jin-b01223194/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
