--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a href="https://www.linkedin.com/in/zao-jin-b01223194/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                     </li>
                     <li>
-                        <a href="mailto:jinzao.business@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                        <a href="mailto:wangxiuying.business@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                     </li>
                     <li>
                         <a href="live:.cid.a91264a981eb9739" target="_blank"><i class="fa fa-skype" aria-hidden="true"></i></a>
@@ -282,7 +282,7 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
                             <a href="https://www.linkedin.com/in/zao-jin-b01223194/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="mailto:jinzao.business@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                            <a href="mailto:wangxiuying.business@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="skype:live:.cid.a91264a981eb9739" target="_blank"><i class="fa fa-skype" aria-hidden="true"></i></a>
