--- a/index.html
+++ b/index.html
@@ -241,13 +241,13 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form action="https://formspree.io/mzbdwkaw" method="POST">
+            <form action="https://formspree.io/f/mbjpvbgj" method="POST">
                     <label>
-                        Your email:
+                        Email address:
                         <input type="text" name="_replyto">
                     </label>
                     <label>
-                        Your message:
+                        Message:
                         <textarea name="message"></textarea>
                     </label>
 
