--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
     <!-- End #experience -->
 
     <div id="education">
-        <h2 class="heading">Education</h2>
+        <h2 class="heading"><b>Education</b></h2>
 
         <!-- End .education-block -->
 
@@ -172,7 +172,7 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+        <h2 class="heading"><b>Projects</b></h2>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
