--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="mailto:wangxiuying.business@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                     </li>
                     <li>
-                        <a href="live:.cid.a91264a981eb9739" target="_blank"><i class="fa fa-skype" aria-hidden="true"></i></a>
+                        <a href="skype:live:.cid.a91264a981eb9739" target="_blank"><i class="fa fa-skype" aria-hidden="true"></i></a>
                     </li>
                     <li>
                         <a href="https://t.me/wangxiuying2" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a>
