--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                  </ul>
             </div>
             <div class="row">
-                <a href="Jin_Zao_CV.pdf" class="btn-rounded-white">Download Resume</a>
+                <a href="Wang_Xiu_Ying_CV.pdf" class="btn-rounded-white">Download Resume</a>
             </div>
             
         </div>
