--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
     <div id="experience" class="background-alt">
         <h2 class="heading"><b>Experience</b></h2>
         <div id="experience-timeline">
-            <div data-date="04/2012 - 11/2019">
+            <div data-date="04/2012 - 11/2018">
                 <h3>Talenox, Hong Kong, Hong Kong, China</h3>
                 <h4>Software Programmer</h4>
                 <p>
@@ -127,7 +127,7 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
                 
             </div>
 
-            <div data-date="07/2019 - Current">
+            <div data-date="07/2018 - Current">
                 <h3>Self-employed, Hong Kong</h3>
                 <h4>Full-Stack Developer</h4>
                 <p>
@@ -155,7 +155,7 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>The University of Hong Kong</h3>
+            <h3><b>The University of Hong Kong</b></h3>
             <span class="education-date">04/2008 - 04/2012</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <ul>
@@ -212,7 +212,7 @@ Logical and results-driven Web Developer dedicated to building and optimizing us
     <!-- End #projects -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading"><b>Skills</b></h2>
         <ul>
             <li>JavaScript</li>
             <li>React.js</li>
